--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
 <h1>Day la trang about, no ko co gi dac biet</h1>
 <h2>Minh muon kiem tien</h2>
 <p>Bo may thich sua day, lam gi nhau?!?</p>
+<p>Sua them lan nua cho vui</p>
